# OpenCodeDeck

./: .gitignore  AGENTS.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
.github/workflows/: build.yml
.superpowers/sdd/: progress.md
.superpowers/sdd/briefs/: final-fix-report.md  task-1-brief.md  task-1-diff-stat.txt  task-1-diff.txt  task-1-fix-report.md  task-1-report.md  task-1-review.md  task-10-diff-stat.txt  task-10-diff.txt  task-10-report.md  task-10-review.md  task-11-report.md  task-12-report.md  task-13-report.md  task-14-report.md  task-2-report.md  task-3-report.md  task-4-report.md  task-5-report.md  task-6-report.md  task-7-report.md  task-8-diff-stat.txt  task-8-diff.txt  task-8-report.md  (+2 more)
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  env_path.rs  error.rs  lib.rs  main.rs  state.rs
src-tauri/src/bridge/: env_check.rs  installer.rs  mod.rs
src-tauri/src/config/: mod.rs  renderer.rs  store.rs
src-tauri/src/monitor/: health.rs  log_buffer.rs  mod.rs  stdout_parser.rs
src-tauri/src/opencode_config/: commands.rs  mod.rs  store.rs
src-tauri/src/process/: command_util.rs  manager.rs  mod.rs  port_check.rs  supervisor.rs
src-tauri/src/process/platform/: unix.rs  windows.rs
src/components/: ErrorBoundary.tsx  LogView.tsx  ProcessCard.tsx  StateView.tsx  WechatQrDialog.tsx
src/hooks/: useAsync.ts  useConfig.tsx  useOpencodeConfig.tsx  useProcessState.ts  useProcessState.tsx  useTauriEvent.ts
src/lib/: opencode-types.ts  tauri.ts  types.ts  utils.ts
src/pages/: Bridge.tsx  Channels.tsx  Config.tsx  Dashboard.tsx  Logs.tsx  Processes.tsx  Providers.tsx
src/styles/: globals.css
(+10 files in other folders)
