[package]
name = "opencodedeck"
version = "0.1.0"
edition = "2021"

[lib]
name = "opencodedeck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"
thiserror = "1"
reqwest = { version = "0.12", features = ["blocking"] }
chrono = "0.4"
nix = { version = "0.29", features = ["signal"] }
which = "7"
tauri-plugin-dialog = "2"
