[package]
name = "opencodedeck"
version = "0.1.1"
edition = "2021"

[lib]
name = "opencodedeck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "5"
thiserror = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "charset", "http2"] }
chrono = "0.4"
which = "7"
tauri-plugin-dialog = "2"

[dev-dependencies]
tempfile = "3"
tauri = { version = "2", features = ["test"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_NetworkManagement_IpHelper",
    "Win32_Networking_WinSock",
] }
